Change of selector
Due to plugin renaming one class name changed

--- a/w8ing_style.css
+++ b/w8ing_style.css
@@ -1,8 +1,4 @@
-.settings_page_waitp #wpbody-content textarea{
+.settings_page_w8ing #wpbody-content textarea{
 	min-height: 150px;
 	width: 100%;
-}
-
-.settings_page_waitp #wpbody-content th{
-	padding-left: 0;
 }
